--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from '../components/Hero';
 import Experience from '../components/Experience';
 import Education from '../components/Education';
 import Skills from '../components/Skills';
+import Projects from '../components/Projects';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -17,6 +18,7 @@ import Skills from '../components/Skills';
 		<Experience client:load />
 		<Education client:load />
 		<Skills client:load />
+		<Projects client:load />
 	</main>
 </Layout>
 
